IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
3/28/12: Fixed division by 0 in Splittilt with small number of input slices
(In 4.5).

3/26/12: IMOD_4-6-0 and branch to IMOD_4-5-0
3/25/12: Made Findcontrast scale data properly for float data regardless of
range and made it handle incorrect file min/max as well as possible.

3/23/12: In eTomo - Tomogram Generation preventing GPU parallel processing
when the only GPU available in the local host.(Bug# 1555)

3/23/12: In eTomo - PEET, added more error checking to the startup dialog.
(Bug# 1607)

3/22/12: In eTomo - Final Aligned Stack, displaying the expected defocus in
microns.(Bug# 1604)

3/22/12: In eTomo - Final Aligned Stack, fixed a bug where the erase beads
"diameter to erase" value was not being binned.(Bug# 1600)

3/21/12: Fixed problems in warping due to accessing data out of range,
unmasked by fixes on 3/7/12.

3/19/12: In eTomo getting EXCLUDELIST for tilt.com from align.log when
possible.(Bug# 1407)

3/19/12: Fixed problem running new etomo script on cygwin with python 2.5.

3/19/12: Made eTomo remember whether the project log was visible when a
dataset was last opened.  Fixed some PEET bugs: "Manual cylinder orientation"
was not set correctly when the .prm file was copied, maskModelPts must never
contain a "NaN or a single value, pressing "Run" when a process was already
running caused the .com files to be deleted.(Bug# 1605)

3/16/12: In eTomo added an interface for running gputilttest to the Tools
menu.(Bug# 1525)

3/16/12: IMOD_4-4-9

3/16/12: Image display in model view: fixed crash from using new black/white
button with data loaded as integers; fixed problems if model view is closed
and reopened; image display state is now retained if model view reopened.

3/16/12: In eTomo - PEET, popping up an error message when the PEET
installation is not compatible with the current IMOD version.(Bug# 1597)

3/15/12: IMOD_4-4-8